--- a/API/Admin/Pages/Category/EditCategoris.razor
+++ b/API/Admin/Pages/Category/EditCategoris.razor
@@ -1,13 +1,14 @@
 ﻿@page "/EditCategoris/{id:int}"
 @using System.Text
 
-<h2 class="text-success p-2">@FormSubmitMessage</h2>
-<EditForm Model="proData" OnValidSubmit="HandleValidSubmit" OnInvalidSubmit="HandleInvalidSubmit" FormName="CreateCate">
+<div class="panel-heading"><h2>Sửa loại sản phẩm </h2></div>
+
+<EditForm Model="proData" OnValidSubmit="HandleValidSubmit">
     <DataAnnotationsValidator />
-    <h1>Create Category</h1>
+    <ValidationSummary />
 
     <div class="form-group">
-        <label>Name</label>
+        <label class="font-weight-bold">Tiêu đề</label>
         <InputText class="form-control" @bind-Value="proData.Name" />
         <div class="text-danger ps-3">
             <ValidationMessage For="()=>proData.Name"></ValidationMessage>
@@ -15,24 +16,30 @@
     </div>
     <div class="form-group">
         <label>Image</label>
-        <InputText class="form-control" @bind-Value="proData.Image" />
+        <InputFile OnChange="OnParametersSetAsync" />
         <div class="text-danger ps-3">
             <ValidationMessage For="()=>proData.Image"></ValidationMessage>
         </div>
     </div>
     <div class="form-group">
-        <div class="input-box">
-            <label>Trạng Thái</label>
-            <InputSelect @bind-Value="proData.Status">
-                <option value="0" selected>Hợp lệ</option>
-                <option value="1">Không hợp lệ</option>
-            </InputSelect>
+        <label class="font-weight-bold">Trạng thái</label>
+        <InputSelect class="form-control" @bind-Value="proData.Status">
+            <option value="0" selected>Hợp lệ</option>
+            <option value="1">Không hợp lệ</option>
+        </InputSelect>
+
+        <div class="text-danger ps-3">
+            <ValidationMessage For="()=>proData.Status">
+
+            </ValidationMessage>
         </div>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-primary">Sửa</button>
     </div>
+
 </EditForm>
+<h2 class="text-success p-2">@FormSubmitMessage</h2>
 
 @code {
    
@@ -69,7 +76,7 @@
                     if (response.IsSuccessStatusCode)
                     {
                         ReceivedBlog = JsonConvert.DeserializeObject<Categories>(apiResponse);
-                        FormSubmitMessage = "Sửa blog thành công !";
+                        FormSubmitMessage = "Sửa  thành công !";
                     }
                     else
                     {
