--- a/API/Admin/Pages/Category/Categoris.razor
+++ b/API/Admin/Pages/Category/Categoris.razor
@@ -1,17 +1,17 @@
 ﻿ @page "/Category"
-<p> <a href="AddCategories">Thêm loại sản phẩm</a></p>
+<p> <a href="AddCategories">Thêm danh mục sản phẩm</a></p>
 <div class="panel panel-primary">
     <!-- Default panel contents -->
-    <div class="panel-heading"><h2>Thông tin loại sản phẩm </h2></div>
+    <div class="panel-heading"><h2>Thông tin danh mục sản phẩm </h2></div>
 
     <!-- Table -->
     <table class="table">
         <thead>
             <tr>
-                <th>Name</th>
-                <th>Image</th>
-                <th>Status</th>
-                <th></th>
+                <th>Tên</th>
+                <th>Hình Ảnh</th>
+                <th>Trạng Thái</th>
+                <th>Khác</th>
             </tr>
         </thead>
         <tbody>
