--- a/API/Admin/Pages/Category/EditCategoris.razor
+++ b/API/Admin/Pages/Category/EditCategoris.razor
@@ -8,21 +8,14 @@
     <ValidationSummary />
 
     <div class="form-group">
-        <label class="font-weight-bold">Tiêu đề</label>
+        <label class="font-weight-bold">Tiêu Đề</label>
         <InputText class="form-control" @bind-Value="proData.Name" />
         <div class="text-danger ps-3">
             <ValidationMessage For="()=>proData.Name"></ValidationMessage>
         </div>
     </div>
     <div class="form-group">
-        <label>Image</label>
-        <InputFile OnChange="OnParametersSetAsync" />
-        <div class="text-danger ps-3">
-            <ValidationMessage For="()=>proData.Image"></ValidationMessage>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="font-weight-bold">Trạng thái</label>
+        <label class="font-weight-bold">Trạng Thái</label>
         <InputSelect class="form-control" @bind-Value="proData.Status">
             <option value="0" selected>Hợp lệ</option>
             <option value="1">Không hợp lệ</option>
@@ -35,21 +28,21 @@
         </div>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary">Sửa</button>
+        <button type="submit" class="btn btn-primary">Sửa Danh Mục</button>
     </div>
 
 </EditForm>
 <h2 class="text-success p-2">@FormSubmitMessage</h2>
 
 @code {
-   
+
     string urlCate = "http://localhost:20714/api/Categories";
     public Categories proData = new Categories();
     Categories ReceivedBlog;
-        public string FormSubmitMessage { get; set; } = string.Empty;
+    public string FormSubmitMessage { get; set; } = string.Empty;
 
-        [Parameter]
-        public int Id { get; set; }
+    [Parameter]
+    public int Id { get; set; }
     protected async override Task OnParametersSetAsync()
     {
         using (var httpClient = new HttpClient())
@@ -63,28 +56,28 @@
         }
     }
 
-        public async Task HandleValidSubmit()
-        {
+    public async Task HandleValidSubmit()
+    {
         ReceivedBlog = new Categories();
-            using (var httpClient = new HttpClient())
-            {
+        using (var httpClient = new HttpClient())
+        {
             var jsonContent = new StringContent(JsonConvert.SerializeObject(proData), Encoding.UTF8, "application/json");
 
             using (var response = await httpClient.PutAsync($"{urlCate}/{proData.CateID}", jsonContent))
+            {
+                string apiResponse = await response.Content.ReadAsStringAsync();
+                if (response.IsSuccessStatusCode)
                 {
-                    string apiResponse = await response.Content.ReadAsStringAsync();
-                    if (response.IsSuccessStatusCode)
-                    {
-                        ReceivedBlog = JsonConvert.DeserializeObject<Categories>(apiResponse);
-                        FormSubmitMessage = "Sửa  thành công !";
-                    }
-                    else
-                    {
-                        FormSubmitMessage = "Sửa thất bại: " + apiResponse;
-                    }
+                    ReceivedBlog = JsonConvert.DeserializeObject<Categories>(apiResponse);
+                    FormSubmitMessage = "Sửa  thành công !";
+                }
+                else
+                {
+                    FormSubmitMessage = "Sửa thất bại: " + apiResponse;
                 }
             }
         }
-
-        public void HandleInvalidSubmit() => FormSubmitMessage = "Dữ liệu không hợp lệ, vui lòng kiểm tra lại.";
     }
+
+    public void HandleInvalidSubmit() => FormSubmitMessage = "Dữ liệu không hợp lệ, vui lòng kiểm tra lại.";
+}
