--- a/API/Admin/Shared/NavMenu.razor
+++ b/API/Admin/Shared/NavMenu.razor
@@ -23,6 +23,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/Category">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Danh Mục
+            </NavLink>
+        </li> 
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="/getproduct">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Sản Phẩm
             </NavLink>
