--- a/API/WebTraSua/Pages/ShopPage/ShopPage.razor
+++ b/API/WebTraSua/Pages/ShopPage/ShopPage.razor
@@ -74,15 +74,12 @@
                     <div class="col-md-4 md-4 mt-5">
                         <a class="nav-link text-black fs-16 me-75" href="details/@product.ProductID">
                             <div class="product-container">
-                                <img src="@(product.Image.FirstOrDefault()?.Name ?? "https://via.placeholder.com/306x301")"
+                                <img src="@GetImagePath((product.Image.FirstOrDefault())?.Name ?? "https://via.placeholder.com/306x301")"
                                      style="height: 301px; width: 306px;" alt="">
                                 <div class="mt-3 text-center">
                                     <p style="margin-bottom: 0rem;margin-left: 77px;">@product.Name</p>
                                     <p style="margin-bottom: 0rem;margin-left: 77px;">@product.Size_Product.FirstOrDefault()?.Price VNĐ</p>
                                 </div>
-                                <a href="details/@product.ProductID" class="btn-mua-ngay btn btn-primary mt-4 rounded-1">
-                                    MUA NGAY
-                                </a>
                             </div>
                         </a>
                     </div>
@@ -101,6 +98,7 @@
     string urlImage = "http://localhost:20714/api/Images";
     string urlSizeProduct = "http://localhost:20714/api/Size_Product";
     string urlCategory = "http://localhost:20714/api/Categories";
+    string imageBasePath = "http://localhost:49972/images/";
 
     public IEnumerable<Product> products { get; set; } = Enumerable.Empty<Product>();
     public IEnumerable<Image> images { get; set; } = Enumerable.Empty<Image>();
@@ -158,4 +156,6 @@
 
         }
     }
+
+    private string GetImagePath(string imageName) => $"{imageBasePath}{imageName}";
 }
