--- a/API/Admin/Pages/Bill/EditBill.razor
+++ b/API/Admin/Pages/Bill/EditBill.razor
@@ -5,24 +5,24 @@
 <EditForm Model="proData" OnValidSubmit="HandleValidSubmit" OnInvalidSubmit="HandleInvalidSubmit" FormName="UpdateBill">
     <DataAnnotationsValidator />
     <h1>Sửa Sản Phẩm</h1>
-    <div class="input-box">
+    <div class="form-group">
         <label>Ngày</label>
-        <InputDate @bind-Value="proData.Date" placeholder="Ngày" />
+        <InputDate class="form-control" @bind-Value="proData.Date" placeholder="Ngày" />
         <div class="text-danger ps-3">
             <ValidationMessage For="()=>proData.Date"></ValidationMessage>
         </div>
     </div>
-    <div class="input-box">
-        <label>Tổng</label>
-        <InputNumber @bind-Value="proData.Total" placeholder="Tổng" />
+    <div class="form-group">
+        <label>Thành tiền</label>
+        <InputNumber class="form-control" @bind-Value="proData.Total" placeholder="Tổng" />
         <div class="text-danger ps-3">
             <ValidationMessage For="()=>proData.Total"></ValidationMessage>
         </div>
     </div>
 
-    <div class="input-box">
-        <label>Danh Mục</label>
-        <InputSelect @bind-Value="proData.UserID">
+    <div class="form-group">
+        <label>User</label>
+        <InputSelect class="form-control" @bind-Value="proData.UserID">
             @foreach (User item in users)
             {
                 @item.Name
@@ -33,9 +33,9 @@
             <ValidationMessage For="()=>proData.UserID"></ValidationMessage>
         </div>
     </div>
-    <div class="input-box">
-        <label>Danh Mục</label>
-        <InputSelect @bind-Value="proData.StatusID">
+    <div class="form-group">
+        <label>Trạng thái</label>
+        <InputSelect class="form-control" @bind-Value="proData.StatusID">
             @foreach (Status item in statuses)
             {
                 @item.Name
@@ -48,7 +48,9 @@
     </div>
 
 
-    <button type="submit" class="btn">Thêm Sản Phẩm</button>
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Sửa hóa đơn</button>
+    </div>
     <p class="text-danger text-center p-2">@FormSubmitMessage</p>
 </EditForm>
 
@@ -119,7 +121,7 @@
                 if (response.IsSuccessStatusCode)
                 {
                     ReceivedPro = JsonConvert.DeserializeObject<Admin.Model.Bill>(apiResponse);
-                    FormSubmitMessage = "Sửa sản phẩm thành công!";
+                    FormSubmitMessage = "Sửa thành công!";
                 }
                 else
                 {
