--- a/API/WebTraSua/Shared/MainLayout.razor
+++ b/API/WebTraSua/Shared/MainLayout.razor
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="col-md-2">
-                    <a class="nav-hover nav-link text-black fs-16 fw-medium" href="/">
+                    <a class="nav-hover nav-link text-black fs-16 fw-medium" href="/cart">
                         <i class="me-3 fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
