--- a/API/Admin/Shared/NavMenu.razor
+++ b/API/Admin/Shared/NavMenu.razor
@@ -37,6 +37,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Ảnh Sản Phẩm
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/bill">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Hóa Đơn
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/getimg">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Hóa Đơn Chi Tiết
+            </NavLink>
+        </li>
     </ul>
 </div>
 
